src/index.css
html{
  --antd-wave-shadow-color:var(var(--primary))
}
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}
:root{
  --secondary:#3C8F7D;
  --secondary-light:#6FA52C;
  --secondary-transparent:#16834229;
  --primary-dark:#e79f39;
    --primary:#EBB054;
    --primary-light:#FEE4BD;

}
a{
    color: inherit;
    text-decoration: none;
    text-decoration: 1px solid underline;
    text-underline-offset: 1px;
}
a:hover,a:focus{

  text-decoration: 1px solid underline;
    text-underline-offset: 1px;
}
.ant-btn-primary{
background-color: var(--primary);
border-color: var(--primary);
}
.ant-btn-primary:hover, .ant-btn-primary:focus,.ant-checkbox-checked .ant-checkbox-inner{
background-color: var(--primary-dark);
border-color: var(--primary-dark);
}
.ant-input-search .ant-input:hover, .ant-input-search .ant-input:focus,.ant-checkbox-wrapper:hover .ant-checkbox-inner, .ant-checkbox:hover .ant-checkbox-inner, .ant-checkbox-input:focus + .ant-checkbox-inner,.ant-checkbox-checked::after{
  border-color: var(--primary);
}
::selection,.ant-checkbox-indeterminate .ant-checkbox-inner::after{
  background: var(--primary);
}
.ant-checkbox-group{
  display: flex;
    flex-wrap: wrap;
    row-gap: 1em;
}.ant-layout{
  background: #fff;
}
.logo{
    
    height: 50px;
   

    object-fit: cover;
    object-position: left;
}
.ant-layout-header{
  background-color:transparent;
    padding: 0 1rem;
    height: auto;
}
.ant-typography + h1.ant-typography, .ant-typography + h2.ant-typography, .ant-typography + h3.ant-typography, .ant-typography + h4.ant-typography, .ant-typography + h5.ant-typography,.ant-typography ,p {
    margin-top: 0;
        margin-bottom: 0;
}
img{
  user-select: none;
}
.ant-layout-header .header__inner{ 
    justify-content: space-between;
        display: flex;
        flex-wrap: wrap;
    align-items: center;
column-gap: 0.5rem;
max-width: 1250px;
margin: 0 auto;
height: fit-content;
height: auto;
}
.ant-input-group-addon
{position: relative;
z-index: 10;
  border-top-right-radius: 30px;
    border-bottom-right-radius: 30px;
    overflow: hidden;}
.ant-input-search-with-button input{    
    border-radius: 30px;
    padding: 6.5px 11px 6.5px 15px;

}
@media(min-width:500px){
.logo{
    width: auto;
}
      }

